--- a/09-multi-file-project/09-multi-file-project.vcxproj
+++ b/09-multi-file-project/09-multi-file-project.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{515089B1-6731-4A17-B8D7-E43755B48DE4}</ProjectGuid>
-    <RootNamespace>My10templates</RootNamespace>
+    <ProjectGuid>{1CE9726B-8045-4D3A-BE09-90F78D45DA20}</ProjectGuid>
+    <RootNamespace>My09multifileproject</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="functions.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="functions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
