--- a/02-conditionals-loops-1/02-conditionals-loops-1.vcxproj
+++ b/02-conditionals-loops-1/02-conditionals-loops-1.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{515089B1-6731-4A17-B8D7-E43755B48DE4}</ProjectGuid>
-    <RootNamespace>My10templates</RootNamespace>
+    <ProjectGuid>{6EF943AF-0251-4EA8-9B8F-2CACE5D47355}</ProjectGuid>
+    <RootNamespace>My02conditionalsloops1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
