--- a/03-conditionals-loops-2/03-conditionals-loops-2.vcxproj
+++ b/03-conditionals-loops-2/03-conditionals-loops-2.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{515089B1-6731-4A17-B8D7-E43755B48DE4}</ProjectGuid>
-    <RootNamespace>My10templates</RootNamespace>
+    <ProjectGuid>{61F1F2A3-D424-4947-8799-27979D946C46}</ProjectGuid>
+    <RootNamespace>My03conditionalsloops2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
