--- a/08-structures/08-structures.vcxproj
+++ b/08-structures/08-structures.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{515089B1-6731-4A17-B8D7-E43755B48DE4}</ProjectGuid>
-    <RootNamespace>My10templates</RootNamespace>
+    <ProjectGuid>{67A53D0B-EA63-4906-94B2-284BE5B0CAC7}</ProjectGuid>
+    <RootNamespace>My08structures</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
